--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "push": "bash scripts/push.sh"
   },
   "dependencies": {
+    "@vuepress/plugin-back-to-top": "2.0.0-beta.48",
     "vuepress": "2.0.0-beta.48",
     "vuepress-theme-reco": "2.0.0-beta.26"
   }
